app/assets/stylesheets/home.css.scss
// Place all the styles related to the Home controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

// this is necessary to prevent 100% height SVG
// elements from generating a scrollbar
svg { vertical-align: top; }

body {
  overflow: hidden;
  height: 200000px;
  width: 200000px;
}

#main-content {
  height: 100%;
  width: 100%;
}

a#help {
  display: block;
  font-size: 0.8em;
  margin-top: 2px;
  color: #0000CB;
}
a#help:visited {
  color: #0000CB;
}

#footer-panel a#help {
  background-color: rgba(245, 245, 245, 0.75);
  position: fixed;
  bottom: 46px;
  padding: 4px 20px 6px 20px;
  border-radius: 10px;
  font-size: 16px;
}
#footer-panel a#help.timeline-adjust {
  bottom: 122px;
}

#site-header {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   font-size: 1.2em;
   padding: 5px 10px;
   border-bottom: 2px solid #999;
   background-color: #f5f5f5;
   color: #444;
   font-weight: bold;
   #left-header {
      float:left;
      p {
        margin: 10px 0 0 10px;
      }
      #key {
        font-size: 0.6em;
        margin: 8px 0 0 15px;
        padding: 5px 0px 5px 10px;
        .key {
          position: relative;
          top: -3px;
          margin-right: 10px;
          font-size:1.3em;
        }
        label {
          margin-right: 5px;
          position: relative;
          top: -3px;
        }
        .block {
          width: 16px;
          height: 16px;
          border: 1px solid #aaa;
          display: inline-block;
          position: relative;
          top: 2px;
          margin-right: 10px;
          border-radius: 10px;
        }
        .resource{
          background-color: #0868ac;
        }
        .genre{
          background-color: #006d2c;
        }
        .discipline {
          background-color: #b30000;
        }
        .format {
          background-color: #810f7c;
        }
        span.selected {
          font-size: 1.2em;
          color: black;
        }
        .text-button {
          cursor: pointer;
        }
        .text-button label {
          cursor: pointer;
        }
      }
   }
}

footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  font-size: 1.2em;
  padding: 5px 10px;
  border-bottom: 2px solid #999;
  background-color: #f5f5f5;
  color: #444;
  font-weight: bold;
  height: 62px;
  overflow: hidden;
}
#wait-container {
  position: absolute;
  top: 25%;
  left: 50%;
  #wait {
    position: relative;
    left: -50%;
    border: 1px solid black;
    border-radius: 10px;
    padding: 25px;
    width: 170px;
    text-align: center;
    margin: 25% 0;
    box-shadow: 3px 3px 10px black;
    background-color: white;

    p {
      margin: 0 0 15px 0;
      color: #666;
      font-weight: bold;
      font-size: 1.1em;
    }
  }
}

.node {
  cursor: pointer;
//   stroke: #059;
  stroke-width: 1px;
}
.node > text {
  fill: white;
}
.node > text.empty {
  fill: rgba(255,255,255,0.5);
}

.leaf.resource.disabled,
.fixed.resource.disabled {
  stroke: #444;
  fill: url(/#gradient-resource-disabled);
}

.leaf.resource.disabled.menu,
.fixed.resource.disabled.menu {
  stroke: #444;
  fill: url(/#gradient-resource-disabled-selected);
}


.leaf {
}
.leaf.resource {
  fill: url(/#gradient-resource-normal);
  //  fill: #5ae;
  stroke: #0868ac;
}
.leaf.genre {
  fill: url(/#gradient-genre-normal);
  //  fill: #0b8;
  stroke: #006d2c;
}
.leaf.format {
  fill: url(/#gradient-format-normal);
//  fill: #a90;
  stroke: #810f7c;
}
.leaf.discipline {
  fill: url(/#gradient-discipline-normal);
//  fill: #b66;
  stroke: #b30000;
}

.leaf.no-data {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}

// parent is only used for resource/archive nodes
.parent {
  fill: url(/#gradient-resource-parent);
  stroke: #000050;
  //  stroke-width: 2px;
}
.parent.menu {
  fill: url(/#gradient-resource-parent-selected);
  stroke: #0000A0;
  //  stroke-width: 2px;
}
.parent.resource {
  stroke: #0868ac;
}
.parent.genre {
  stroke: #006d2c;
}
.parent.format {
  stroke: #810f7c;
}
.parent.discipline {
  stroke: #b30000;
}

.empty.discipline {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}
.empty.format {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}
.empty.genre {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}
.empty.resource {
  stroke: rgba(100,100,100,0.5);
  fill: rgba(100,100,100,0.5);
}

/**
 * Special node / states
 */
.root, .parent.root {
  stroke: #444;
  fill: url(/#gradient-arc-root-normal);
}
.root.menu, .parent.root.menu {
  fill: url(/#gradient-arc-root-selected);
}

.link.trace, .parent.trace, .leaf.trace {
  stroke-width: 4px;
  stroke: white;
}
.fixed {
  filter: url(/#drop-shadow)
}
.fixed.resource {
  fill: url(/#gradient-resource-fixed);
}
.fixed.genre {
  fill: url(/#gradient-genre-fixed);
}
.fixed.format {
  fill: url(/#gradient-format-fixed);
}
.fixed.discipline {
  fill: url(/#gradient-discipline-fixed);
}


.menu {
}
.menu.resource {
  fill: url(/#gradient-resource-selected);
}
.menu.genre {
  fill: url(/#gradient-genre-selected);
}
.menu.format {
  fill: url(/#gradient-format-selected);
}
.menu.discipline {
  fill: url(/#gradient-discipline-selected);
}

.collapsed {
//  fill: #555;
  stroke: #888;
//  stroke-width: 2px;
}
.collapsed.resource {
  fill: url(/#gradient-resource-collapsed);
}
.collapsed.genre {
  fill: url(/#gradient-genre-collapsed);
}
.collapsed.format {
  fill: url(/#gradient-format-collapsed);
}
.collapsed.discipline {
  fill: url(/#gradient-discipline-collapsed);
}

.link {
   fill: none;
   stroke: #666;
   stroke-width: 1px;
}

td.label {
  word-break: normal;
}

#menu {
  color: black;
  background-color: #f5f5f5;
  border: 1px solid black;
  width: 225px;
  padding: 0px;
  border-radius: 2px 2px 5px 5px;
  font-size: 0.9em;
  font-weight: 100;
  box-shadow: 0px 0px 15px black;
  position: absolute;
  display: none;
  cursor: default;
  word-break: break-word;

  .titlebar {
    padding: 1px 1px 3px 5px;
    border-bottom: 1px solid #777;
    background-color: #ddd;
    .button-group {
      float:right;

      img {
        cursor: pointer;
        margin: 1px;
        &:hover {
          box-shadow: 0px 0px 5px 2px #8cf;
        }
      }

      .pinned {
        border: 1px inset;
        background-color: #ccc;
        box-shadow: inset 0 0 5px #444;
        margin: 0;
        &:hover {
          box-shadow: inset 0 0 5px #8cf;
        }
      }
    }
  }

  #not-subscriber-msg {
    margin-left: 12px;
    margin-right: 12px;
    padding-bottom: 10px;
    border-bottom: 1px solid gray;
  }
  .warning {
    color: red;
  }

  #info {
    margin: 8px 10px;
    font-size: 0.8em;
    border-bottom: 1px solid #777;
    padding-bottom: 8px;

    table {
      border-collapse: collapse;
    }
    td.title, td.size {
      line-height: 1.15em;
      padding-left: 10px;
    }
  }

  p {
    margin: 0px;
    border-bottom: 1px solid #999;
    font-size: 0.9em;
    text-align: center;
    background-color: #dedede;
  }

  input[type="checkbox"] {
    margin-right: 10px;
    cursor:pointer;
    pointer-events: none;
  }

  hr {
    border: 0;
    border-bottom: 1px solid #aaa;
  }

  .padded {
    margin-left: 25px;
  }

  ul {
    list-style: none;
    padding: 0px;
    margin: 8px 10px;
    font-size: 0.8em;
  }
  li {
    &:hover {
      background-color: #ddf;
      cursor:pointer;
    }
  }

  li.active {
    background-color: #55a;
    color: white;
    padding: 1px 4px 2px 4px;
  }
}

div.search {
  text-align: right;
  float: right;
  input[type=text] {
    width: 250px;
    margin-right: 5px;
  }
  input[type=button] {
    position: relative;
    top: -1px;
    width: 65px;
  }
  label {
    font-size: 0.65em;
    color: #666;
    font-weight: bolder;
    margin-right: 5px;
  }
  input[type=text].date-field {
    width: 50px;
  }
}

#dim-overlay {
   z-index: 1000;
   display: none;
   width: 100%;
   height: 100%;
   position: fixed;
   background-color: rgba(64, 64, 64, 0.5);
   top: 0%;
   left: 0%;
}


#working {
   display: none;
   text-align: center;
   width: 200px;
   height: auto;
   background-color: white;
   position: fixed;
   top: 40%;
   left: 50%;
   margin-left: -100px;
   z-index: 1001;
   box-shadow: 3px 3px 10px black;
   background-color: white;
   font-size: 0.85em;
   font-weight: 200;
   #wait-spinner {
      margin-top: 15px;
   }
}

#d3-slider-start-display, #d3-slider-end-display, #d3-slider-range-display {
  position: relative;
  top: 42px;
  height: 0;
  padding: 0;
  overflow: visible;
  font-size: 16px;
}
#d3-slider-end-display {
  margin-left: 15px;
}
#d3-slider-start-display {
  text-align: right;
  margin-left: -94px;
  width: 100px;
}

#d3-slider-range-display {
  text-align: center;
  width: 200px;
}

#timeline-decade #d3-slider-range-display {
  margin-left: -96px;
}

#timeline-quarter-century #d3-slider-range-display {
  margin-left: -89px;
}

#timeline-half-century #d3-slider-range-display {
  margin-left: -78px;
}

#timeline-century #d3-slider-range-display {
  margin-left: -58px;
}

.d3-slider {
  position: relative;
//  font-family: Verdana,Arial,sans-serif;
  font-size: 1.1em;
  border: 1px solid #aaaaaa;
  z-index: 2;
}

.d3-slider-horizontal {
  height: 24px;
}

.d3-slider-range {
  background:#2980b9;
  left:0px;
  right:0px;
  height: 24px;
  position: absolute;
}

.d3-slider-range-vertical {
  background:#2980b9;
  left:0px;
  right:0px;
  position: absolute;
  top:0;
}

.d3-slider-vertical {
  width: .8em;
  height: 100px;
}

.d3-slider-handle {
  position: absolute;
  width: 22px;
  height: 22px;
  border: 1px solid #d3d3d3;
  border-radius: 16px;
  background: #eee;
  background: linear-gradient(to bottom, #eee 0%, #ddd 100%);
  z-index: 3;
}

.d3-slider-handle:after {
  content: "< >";
  font: bold 13px Arial, sans-serif;
  vertical-align: text-top;
  margin-left: 1.5px;
  line-height: 23px;
}

.d3-slider-handle:hover {
  border: 1px solid #999999;
}

.d3-slider-horizontal .d3-slider-handle {
  top: 0;
  margin-left: -.6em;
}

.d3-slider-axis {
  position: relative;
  z-index: 1;
}

.d3-slider-axis-bottom {
  top: 24px;
}

.d3-slider-axis-right {
  left: .8em;
}

.d3-slider-axis path {
  stroke-width: 0;
  fill: none;
}

.d3-slider-axis line {
  fill: none;
  stroke: #aaa;
  shape-rendering: crispEdges;
}

.d3-slider-axis text {
  font-size: 10px;
  stroke: #aaa;
}

.d3-slider-vertical .d3-slider-handle {
  left: -.25em;
  margin-left: 0;
  margin-bottom: -.6em;
}

#footer-panel {
  position: absolute;
  bottom: 0px;
  height: 40px;
  left: 20px;
}
#bigdiva-logo {
  background-image: url('/assets/bigdiva-logo-sm.png');
  background-repeat: no-repeat;
  height: 101px;
  width: 80px;
  position: fixed;
  bottom: 4px;
  z-index: 20;
  right: 8px;
}
#bigdiva-logo.timeline-adjust {
  bottom: 76px;
}
#loading-timeline {
  background-image: url('/assets/loader.gif');
  background-repeat: no-repeat;
  background-size: 14%;
  background-position: 4px;
  padding-left: 38px;
  background-color: rgba(245, 245, 245, 0.75);
  position: fixed;
  bottom: 10px;
  height: 29px;
  border-radius: 16px;
  padding-right: 12px;
  padding-top: 6px;
  cursor: default;
}
.tabs {
  width:100%;
  display:inline-block;
  position: absolute;
  bottom: 57px;
}

.tab-links {
  width: 950px;
}

/* Clearfix */
.tab-links:after {
  display:block;
  clear:both;
  content:'';
}

.tab-links li {
  margin:0px 1px;
  float:left;
  list-style:none;
}

.tab-links a {
  padding:6px 15px;
  display:inline-block;
  border-radius:8px 8px 0px 0px;
  background: #d1d5da;
  font-size:12px;
  font-weight:600;
  color:#4c4c4c;
  text-decoration: none;
}

.tab-links a:hover {
  background:#d1d5da;
  text-decoration:none;
}

li.selected a, li.selected a:hover {
  background:#f5f5f5;
  color:black;
  font-size:14px;
  font-weight: bold;
  margin-top: -2px;
}

.tab {
  display:none;
}

.tab.active {
  display:block;
}

